2001-12-09  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02646] Some code cleanups
	* configure: use host libgc instead of gc/gc.a on Linux and/or AIX
	            if possible
	* etc.c (get_cmd): deleted, merged into gethtmlcmd()
	* etc.c (gethtmlcmd): merge get_cmd() code
	* file.c (uncompressed_file_type): initialize slen
	* file.c (passthrough): status deleted
	* file.c (HTMLlineproc0): istr deleted, gethtmlcmd() argument fix
	* fm.h (_GNU_SOURCE): ifndef _GNU_SOURCE
	* proto.h (gethtmlcmd): fix prototypes
	* terms.c: include <sys/ioctl.h> always

2001-12-09  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02645]
	* configure: fix to prevent rcsid expansion

2001-12-08  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02641]
	* configure: generate version.c from version.c.in
	* version.c.in: added
	* version.c: deleted, autogenerated from version.c.in
	* .cvsignore (version.c): added

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02642]
	* linein.c (next_dcompl): fix ifdef EMACS_LIKE_LINEEDIT

2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02640]
	* linein.c (escape_spaces): rewrite
	* linein.c (unescape_spaces): rewrite

2001-12-07  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02638] completion for ! and/or @
	* linein.c (next_compl): check "\\ ", "\\\t"
	* linein.c (escape_spaces): added
	* linein.c (unescape_spaces): added
	* linein.c (doComplete): use unescape_spaces, escape_spaces

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02637]
	* url.c (openSocket): hostname volatile -> const
	* url.c (openSocket): add hname
	* url.c (openSocket): copy hostname to hname to be modified safely
	* url.c (otherinfo): revert previous change

2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02635] dirlist
	* file.c (loadGeneralFile): use pu.file instead of pu.real_file
	* scripts/dirlist.cgi.in: modified for perl4

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>
