@@ -226,43 +226,6 @@ searchAnchorArg(char **arg)
     return p;
 }
 
-char *
-getAnchor(char *arg, char **arg_return)
-{
-    char *p;
-    char buf[LINELEN];
-
-    if (arg_is(arg, "name")) {
-	arg += 4;
-	while (*arg && (*arg == ' ' || *arg == '\t'))
-	    arg++;
-	if (*arg != '=')
-	    return NULL;
-	arg++;
-	while (*arg && (*arg == ' ' || *arg == '\t'))
-	    arg++;
-	p = searchAnchorArg(&arg);
-	buf[0] = '#';
-	strncpy(&buf[1], arg, p - arg);
-	if (arg_return)
-	    *arg_return = p;
-	return allocStr(buf, p - arg + 1);
-    }
-    while (*arg && *arg != '=')
-	arg++;
-    if (*arg == '\0')
-	return NULL;
-    arg++;
-    while (*arg && (*arg == ' ' || *arg == '\t'))
-	arg++;
-    p = searchAnchorArg(&arg);
-    if (arg_return)
-	*arg_return = p;
-    if (p == arg)
-	return allocStr(" ", 1);
-    return allocStr(arg, p - arg);
-}
-
 #ifdef USE_ANSI_COLOR
 static int
 parse_ansi_color(char **str, Lineprop *effect, Linecolor *color)
