@@ -1,3 +1,9 @@
+2001-12-11  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02647]
+	* proto.h (getAnchor): deleted
+	* etc.c (getAnchor): deleted
+
 2001-12-09  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* [w3m-dev 02646] Some code cleanups
